@@ -1,11 +1,11 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/pycifrw/pycifrw-3.3-r1.ebuild,v 1.2 2010/10/10 18:29:29 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/pycifrw/pycifrw-3.3-r1.ebuild,v 1.3 2012/02/25 03:13:32 patrick Exp $
 
 EAPI="3"
 PYTHON_DEPEND="2"
 SUPPORT_PYTHON_ABIS="1"
-RESTRICT_PYTHON_ABIS="3.*"
+RESTRICT_PYTHON_ABIS="3.* *-jython 2.7-pypy-*"
 
 inherit distutils
 
