@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/pycifrw
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/pycifrw/ChangeLog,v 1.3 2010/10/10 18:29:29 arfrever Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/pycifrw/ChangeLog,v 1.4 2012/02/25 03:13:32 patrick Exp $
+
+  25 Feb 2012; Patrick Lauer <patrick@gentoo.org> pycifrw-3.3-r1.ebuild:
+  Restricting pypy and jython
 
   10 Oct 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   pycifrw-3.3-r1.ebuild:
